manifests-failed/triggers-0.4.0.tgz-manifest.yaml
---
# Source: triggers/templates/controller_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-triggers-controller
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/part-of: tekton-triggers
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: triggers-0.4.0
    app.kubernetes.io/version: "v0.4.0"
    triggers.tekton.dev/release: "v0.4.0"
    version: "v0.4.0"
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: controller
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/part-of: tekton-triggers
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: controller
---
# Source: triggers/templates/webhook_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-triggers-webhook
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/part-of: tekton-triggers
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: triggers-0.4.0
    app.kubernetes.io/version: "v0.4.0"
    triggers.tekton.dev/release: "v0.4.0"
    version: "v0.4.0"
    app.kubernetes.io/component: webhook
    app.kubernetes.io/name: webhook
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
    - name: http-metrics
      port: 9090
      protocol: TCP
      targetPort: 9090
    - name: http-profiling
      port: 8008
      protocol: TCP
      targetPort: 8008
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/part-of: tekton-triggers
    app.kubernetes.io/component: webhook
    app.kubernetes.io/name: webhook
---
# Source: triggers/templates/controller_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-triggers-controller
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/part-of: tekton-triggers
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: triggers-0.4.0
    app.kubernetes.io/version: "v0.4.0"
    triggers.tekton.dev/release: "v0.4.0"
    version: "v0.4.0"
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/part-of: tekton-triggers
      app.kubernetes.io/component: controller
      app.kubernetes.io/name: controller
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/part-of: tekton-triggers
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: triggers-0.4.0
        app.kubernetes.io/version: "v0.4.0"
        triggers.tekton.dev/release: "v0.4.0"
        version: "v0.4.0"
        app.kubernetes.io/component: controller
        app.kubernetes.io/name: controller
    spec:
      serviceAccountName: my-release-triggers
      containers:
        - name: controller
          image: "gcr.io/tekton-releases/github.com/tektoncd/triggers/cmd/controller:v0.4.0"
          imagePullPolicy: "IfNotPresent"
          args:
            - "-logtostderr"
            - "-stderrthreshold"
            - "INFO"
            - "-el-image"
            - "gcr.io/tekton-releases/github.com/tektoncd/triggers/cmd/eventlistenersink:v0.4.0"
            - "-el-port"
            - "8080"
            - "-period-seconds"
            - "10"
            - "-failure-threshold"
            - "1"
          ports:
            - containerPort: 9090
              protocol: TCP
---
# Source: triggers/templates/webhook_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-triggers-webhook
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/part-of: tekton-triggers
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: triggers-0.4.0
    app.kubernetes.io/version: "v0.4.0"
    triggers.tekton.dev/release: "v0.4.0"
    version: "v0.4.0"
    app.kubernetes.io/component: webhook
    app.kubernetes.io/name: webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/part-of: tekton-triggers
      app.kubernetes.io/component: webhook
      app.kubernetes.io/name: webhook
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/part-of: tekton-triggers
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: triggers-0.4.0
        app.kubernetes.io/version: "v0.4.0"
        triggers.tekton.dev/release: "v0.4.0"
        version: "v0.4.0"
        app.kubernetes.io/component: webhook
        app.kubernetes.io/name: webhook
    spec:
      serviceAccountName: my-release-triggers
      containers:
        - name: webhook
          image: "gcr.io/tekton-releases/github.com/tektoncd/triggers/cmd/webhook:v0.4.0"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - name: metrics
              containerPort: 9090
            - name: profiling
              containerPort: 8008
            - name: https-webhook
              containerPort: 8443
---
# Source: triggers/templates/webhook_admission.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: my-release-triggers-webhook
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/part-of: tekton-triggers
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: triggers-0.4.0
    app.kubernetes.io/component: webhook
webhooks:
  - name: webhook.triggers.tekton.dev
    admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: my-release-triggers-webhook
        namespace: triggers-0.4.0.tgz
    failurePolicy: Fail
    sideEffects: None
---
# Source: triggers/templates/webhook_admission.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: my-release-triggers-validation
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/part-of: tekton-triggers
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: triggers-0.4.0
    app.kubernetes.io/component: webhook
webhooks:
  - name: validation.webhook.triggers.tekton.dev
    admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: my-release-triggers-webhook
        namespace: triggers-0.4.0.tgz
    failurePolicy: Fail
    sideEffects: None
---
# Source: triggers/templates/webhook_admission.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: my-release-triggers-config
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/part-of: tekton-triggers
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: triggers-0.4.0
    app.kubernetes.io/component: webhook
webhooks:
  - name: config.webhook.triggers.tekton.dev
    admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: my-release-triggers-webhook
        namespace: triggers-0.4.0.tgz
    failurePolicy: Fail
    sideEffects: None
    objectSelector:
      matchLabels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/part-of: tekton-triggers
